it fucking works

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a href="#" class="login-btn">Log in</a>
 </header>
 
-
+<!--Search bar -->
 <section class="search-section">
     <label for="search">Search:</label>
     <input id="search" type="text" placeholder="Search for music, artists or albums...">
@@ -52,7 +52,7 @@
     <!-- 3. Top 5 albums -->
     <section class="content-row">
         <div class="text">
-            <p>Looking for something you can truly get lost in? These albums offer long, rich journeys through sound, perfect for deep listening and relaxing moments.</p>
+            <p>Looking for music to really get lost in? These albums offer long listening sessions with the same artist, without having to go over and change after 20 min!</p>
         </div>
         <div class="content-box" id="chartAlbums">
             <canvas id="chart3"></canvas>
